# Open_AI_Class

./: README.md  app.py  aula.ipynb  pyproject.toml
